Fixed overflowing popovers in modal dialogs

--- a/Code/app/styles/popovers.css
+++ b/Code/app/styles/popovers.css
@@ -1,6 +1,6 @@
 
 .popover {
-    max-width: 50%;
+    max-width: 30%;
     z-index: 9999 !important
 }
 
